# gemini-mcp-embedding-server

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/gemini_mcp/: server.py
src/gemini_mcp/db/: store.py
src/gemini_mcp/embeddings/: gemini.py
src/gemini_mcp/parsers/: scanner.py
